--- a/DYZB/DYZB/Classes/Home/Home.storyboard
+++ b/DYZB/DYZB/Classes/Home/Home.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="azV-RA-hDp">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="HyZ-uA-EUa">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -8,67 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="bUZ-Ei-QWK">
-            <objects>
-                <viewController id="jn2-u4-Q2y" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="fyh-He-xel"/>
-                        <viewControllerLayoutGuide type="bottom" id="U3p-g4-BMR"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="aDq-VE-h8r">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="mhM-D4-Et7"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iJj-iL-jHU" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="558" y="-263"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="ef5-yu-ejp">
-            <objects>
-                <viewController id="LsF-YA-zCz" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="v7P-Sm-ynA"/>
-                        <viewControllerLayoutGuide type="bottom" id="jO0-VJ-Fbi"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="BXu-9X-aFX">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="i8z-H2-1zA"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Kv7-iC-hSY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="423.19999999999999" y="457.42128935532236"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="8xr-i8-zMd">
-            <objects>
-                <viewController id="px2-dE-UxQ" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jWH-Dv-N1j"/>
-                        <viewControllerLayoutGuide type="bottom" id="Zmh-cu-NgF"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="vhB-5d-LIU">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ETA-Vw-woP"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="UqZ-tP-7f2" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="423.19999999999999" y="1308.3958020989505"/>
-        </scene>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="gvm-iC-uDF">
             <objects>
-                <viewController id="KNs-tk-cgm" sceneMemberID="viewController">
+                <viewController id="KNs-tk-cgm" customClass="HomeViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="6Mw-yk-0dM"/>
                         <viewControllerLayoutGuide type="bottom" id="F74-DI-dLK"/>
@@ -84,32 +27,13 @@
             </objects>
             <point key="canvasLocation" x="559" y="-1021"/>
         </scene>
-        <!--Main View Controller-->
-        <scene sceneID="TsL-DC-Inv">
-            <objects>
-                <tabBarController id="azV-RA-hDp" customClass="MainViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="yW9-vK-34x">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="HyZ-uA-EUa" kind="relationship" relationship="viewControllers" id="kxr-Dc-agz"/>
-                        <segue destination="rzc-3q-TjG" kind="relationship" relationship="viewControllers" id="YsF-1Z-ZrO"/>
-                        <segue destination="rzW-Kb-2EB" kind="relationship" relationship="viewControllers" id="JCG-jL-Y5X"/>
-                        <segue destination="587-3Q-YI0" kind="relationship" relationship="viewControllers" id="bHg-cy-Pgd"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tb5-vY-7cM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1399" y="189"/>
-        </scene>
         <!--首页-->
         <scene sceneID="FKS-MW-J6U">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HyZ-uA-EUa" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1000" title="首页" image="btn_home_normal" badgeValue="1" selectedImage="btn_home_selected" id="6oW-ON-RyZ"/>
+                    <tabBarItem key="tabBarItem" tag="1000" title="首页" image="btn_home_normal" selectedImage="btn_home_selected" id="6oW-ON-RyZ"/>
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ukr-yE-JVs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -123,72 +47,9 @@
             </objects>
             <point key="canvasLocation" x="-516" y="-1021"/>
         </scene>
-        <!--直播-->
-        <scene sceneID="Nhw-92-gcX">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rzc-3q-TjG" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1001" title="直播" image="btn_column_normal" badgeValue="2" selectedImage="btn_column_selected" id="H1y-Yt-8JX"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UXq-BV-vzY">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="jn2-u4-Q2y" kind="relationship" relationship="rootViewController" id="oj5-48-5f0"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vq1-Xn-hJW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-516" y="-263"/>
-        </scene>
-        <!--关注-->
-        <scene sceneID="O6g-bF-t9c">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rzW-Kb-2EB" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1002" title="关注" image="btn_live_normal" badgeValue="3" selectedImage="btn_live_selected" id="yM9-vh-aOW"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="U6P-Hm-w6e">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="LsF-YA-zCz" kind="relationship" relationship="rootViewController" id="pq2-rh-3RQ"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="o1D-H6-1CW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-516" y="457.42128935532236"/>
-        </scene>
-        <!--我的-->
-        <scene sceneID="GLu-Kt-PJ0">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="587-3Q-YI0" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" tag="1003" title="我的" image="btn_user_normal" badgeValue="4" selectedImage="btn_user_selected" id="Ufv-hz-PlM"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="c2G-Dl-jd4">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="px2-dE-UxQ" kind="relationship" relationship="rootViewController" id="ieK-a0-AGT"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9mE-v5-oyW" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-516" y="1308.3958020989505"/>
-        </scene>
     </scenes>
     <resources>
-        <image name="btn_column_normal" width="24" height="24"/>
-        <image name="btn_column_selected" width="24" height="24"/>
         <image name="btn_home_normal" width="24" height="24"/>
         <image name="btn_home_selected" width="24" height="24"/>
-        <image name="btn_live_normal" width="30" height="24"/>
-        <image name="btn_live_selected" width="30" height="24"/>
-        <image name="btn_user_normal" width="24" height="24"/>
-        <image name="btn_user_selected" width="24" height="24"/>
     </resources>
 </document>
