--- a/DYZB/DYZB/Classes/Profile/Profile.storyboard
+++ b/DYZB/DYZB/Classes/Profile/Profile.storyboard
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="azV-RA-hDp">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="587-3Q-YI0">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,32 +24,14 @@
             </objects>
             <point key="canvasLocation" x="423.19999999999999" y="1308.3958020989505"/>
         </scene>
-        <!--Main View Controller-->
-        <scene sceneID="TsL-DC-Inv">
-            <objects>
-                <tabBarController id="azV-RA-hDp" customClass="MainViewController" customModule="DYZB" customModuleProvider="target" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="yW9-vK-34x">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="7pN-x9-jwn" kind="relationship" relationship="viewControllers" id="kxr-Dc-agz"/>
-                        <segue destination="ZjF-Ta-894" kind="relationship" relationship="viewControllers" id="YsF-1Z-ZrO"/>
-                        <segue destination="Mly-Xn-UsS" kind="relationship" relationship="viewControllers" id="JCG-jL-Y5X"/>
-                        <segue destination="587-3Q-YI0" kind="relationship" relationship="viewControllers" id="bHg-cy-Pgd"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="tb5-vY-7cM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1399" y="189"/>
-        </scene>
         <!--我的-->
         <scene sceneID="GLu-Kt-PJ0">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="587-3Q-YI0" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" tag="1003" title="我的" image="btn_user_normal" badgeValue="4" selectedImage="btn_user_selected" id="Ufv-hz-PlM"/>
                     <toolbarItems/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4_7.fullscreen"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="c2G-Dl-jd4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -65,36 +44,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9mE-v5-oyW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-516" y="1308.3958020989505"/>
-        </scene>
-        <!--Home-->
-        <scene sceneID="FPa-2r-vBV">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Home" id="7pN-x9-jwn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="njZ-aS-Gan"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Zlo-Jo-dDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-762" y="-841"/>
-        </scene>
-        <!--Live-->
-        <scene sceneID="IBJ-vc-YaN">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Live" id="ZjF-Ta-894" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="lpx-BE-gtr"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="d5M-ff-Uvp" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-516" y="-263"/>
-        </scene>
-        <!--Follow-->
-        <scene sceneID="kXi-f6-AcV">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Follow" id="Mly-Xn-UsS" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="e0J-2F-Uyh"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="O6h-h2-mx9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-516" y="457.42128935532236"/>
         </scene>
     </scenes>
     <resources>
