--- a/DYZB/DYZB/Classes/Profile/Profile~.storyboard
+++ b/DYZB/DYZB/Classes/Profile/Profile~.storyboard
@@ -8,6 +8,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--View Controller-->
+        <scene sceneID="8xr-i8-zMd">
+            <objects>
+                <viewController id="px2-dE-UxQ" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="jWH-Dv-N1j"/>
+                        <viewControllerLayoutGuide type="bottom" id="Zmh-cu-NgF"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="vhB-5d-LIU">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ETA-Vw-woP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UqZ-tP-7f2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="423.19999999999999" y="1308.3958020989505"/>
+        </scene>
         <!--Main View Controller-->
         <scene sceneID="TsL-DC-Inv">
             <objects>
@@ -21,12 +40,31 @@
                         <segue destination="7pN-x9-jwn" kind="relationship" relationship="viewControllers" id="kxr-Dc-agz"/>
                         <segue destination="ZjF-Ta-894" kind="relationship" relationship="viewControllers" id="YsF-1Z-ZrO"/>
                         <segue destination="Mly-Xn-UsS" kind="relationship" relationship="viewControllers" id="JCG-jL-Y5X"/>
-                        <segue destination="OHT-G0-mKn" kind="relationship" relationship="viewControllers" id="bHg-cy-Pgd"/>
+                        <segue destination="587-3Q-YI0" kind="relationship" relationship="viewControllers" id="bHg-cy-Pgd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tb5-vY-7cM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1399" y="189"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="GLu-Kt-PJ0">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="587-3Q-YI0" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" tag="1003" title="我的" image="btn_user_normal" badgeValue="4" selectedImage="btn_user_selected" id="Ufv-hz-PlM"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="c2G-Dl-jd4">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="px2-dE-UxQ" kind="relationship" relationship="rootViewController" id="ieK-a0-AGT"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9mE-v5-oyW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-516" y="1308.3958020989505"/>
         </scene>
         <!--Home-->
         <scene sceneID="FPa-2r-vBV">
@@ -36,7 +74,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zlo-Jo-dDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-301" y="19"/>
+            <point key="canvasLocation" x="-762" y="-841"/>
         </scene>
         <!--Live-->
         <scene sceneID="IBJ-vc-YaN">
@@ -46,7 +84,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d5M-ff-Uvp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-311" y="121"/>
+            <point key="canvasLocation" x="-516" y="-263"/>
         </scene>
         <!--Follow-->
         <scene sceneID="kXi-f6-AcV">
@@ -56,17 +94,11 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="O6h-h2-mx9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-299" y="243"/>
-        </scene>
-        <!--Profile-->
-        <scene sceneID="1TC-sF-YMb">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Profile" id="OHT-G0-mKn" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="BGd-WX-pby"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="RzZ-tL-PrF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-299" y="354"/>
+            <point key="canvasLocation" x="-516" y="457.42128935532236"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="btn_user_normal" width="24" height="24"/>
+        <image name="btn_user_selected" width="24" height="24"/>
+    </resources>
 </document>
